@@ -1,3 +1,11 @@
+2017-06-05  Saam Barati  <sbarati@apple.com>
+
+        Try to fix features.json by adding an ESNext section.
+
+        Unreviewed.
+
+        * features.json:
+
 2017-06-05  David Kilzer  <ddkilzer@apple.com>
 
         Follow-up: Update JSC's features.json
